Fix letter spacing on headline

--- a/src/base-styles/type.css
+++ b/src/base-styles/type.css
@@ -4,6 +4,7 @@
   font-style: normal;
   font-size: 52px;
   font-weight: 700;
+  letter-spacing: 3px;
   text-align: center;
   text-transform: uppercase;
 }
